# MayaDesk

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
apps/agent/: README.md  pyproject.toml
apps/agent/maya_agent/: __init__.py  agent.py  config.py  events.py  session.py  worker.py
apps/agent/maya_agent/prompts/: __init__.py  system.py
apps/agent/maya_agent/tools/: __init__.py  availability.py  booking.py  callback.py  formatting.py  guards.py  registry.py
apps/agent/maya_agent/tts/: __init__.py  edge.py
apps/api/: README.md  pyproject.toml
apps/api/maya_api/: __init__.py  main.py
apps/api/maya_api/api/: __init__.py  dashboard.py  health.py  internal.py  tokens.py
apps/api/maya_api/app/: __init__.py  factory.py  middleware.py  rate_limit.py  security.py
apps/api/maya_api/events/: __init__.py  bus.py  types.py
apps/api/maya_api/services/: __init__.py  livekit.py
apps/api/maya_api/websocket/: __init__.py  dashboard.py
apps/web/: .env.example  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  providers.tsx
apps/web/app/(patient)/: page.tsx
apps/web/components/dashboard/: AppointmentsTable.tsx  CallbackQueue.tsx  EmergencyBanner.tsx  Sidebar.tsx  StatCard.tsx
apps/web/components/patient/: CallPanel.tsx  ConnectionIndicator.tsx  TranscriptPanel.tsx  (+1 more)
apps/web/hooks/: useDashboard.ts  useDashboardSocket.ts  useVoiceCall.ts
apps/web/lib/: apiClient.ts  format.ts  utils.ts
apps/web/services/: dashboard.ts  voice.ts
apps/web/store/: useUiStore.ts
apps/web/types/: index.ts
(+3 files in other folders)
