[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maya-agent"
version = "0.1.0"
description = "MayaDesk voice agent (Maya) — real-time LiveKit voice pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "MayaDesk" }]
dependencies = [
    "livekit-agents[silero,groq]~=1.6",
    "edge-tts>=6.1",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "maya-domain",
]

[tool.hatch.build.targets.wheel]
packages = ["maya_agent"]

# Resolve the sibling domain package from source during local development.
[tool.uv.sources]
maya-domain = { path = "../../packages/domain", editable = true }
